[gd_scene load_steps=4 format=3 uid="uid://bd2soux0uk2o3"]

[ext_resource type="Texture2D" uid="uid://d33pjaaas03p2" path="res://PNG/Default size/Ship parts/cannonBall.png" id="1_g3118"]
[ext_resource type="Script" path="res://CannonBall.gd" id="1_okhxw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pqboe"]
radius = 5.0

[node name="CannonBall" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_okhxw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pqboe")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_g3118")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.666

[node name="ExplosionTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ExplosionTimer" to="." method="on_explosion_timer_timeout"]
